<resources>
    <string name="app_name">Denunciaty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Denunciaty</string>
    <string name="title_activity_mis_reportes">Mis Reportes</string>
    <string name="title_activity_acceso">Acceso a Denunciaty</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_add_reporte">Añadir Reporte</string>
    <string name="server_client_id">339447190295-tjfqg7t67tn27mj175qu67vfqfj7fi0n.apps.googleusercontent.com</string>
    <string name="title_activity_registro_app">Registro desde nuestra app</string>
    <string name="title_activity_principal">Map</string>
    <string name="title_activity_reporte">Reporte</string>
    <string name="title_activity_mi_perfil">Mi Perfil</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->

    <string name="pref_idioma">Idioma</string>

    <string name="pref_header_general">General</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">Sicronizar ajustes de sistema</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Nuevo mensaje de notificación</string>

    <string name="pref_title_ringtone">Tono de notificación</string>
    <string name="pref_ringtone_silent">Silencio</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Add Reporte Activity -->
    <string name="publicar_addreporte">Publicar</string>
    <string name="descripcion_addreporte">DESCRIPCIÓN</string>
    <string name="gravedad_addreporte">GRAVEDAD</string>
    <string name="incidente_addreporte">INCIDENTE</string>

    <!-- Fragment Add Reporte -->
    <string name="titulo_descriptivo">Título descriptivo</string>
    <string name="descripcion_fragment_addreporte">Descripción</string>
    <string name="ubicacion_fragment_addreporte">Ubicación</string>
    <string name="publicar_reporte_fragment_addreporte">Publicar reporte</string>
    <string name="toast_falta_texto">Ha dejado campos vacíos</string>



    <!-- Navigation Drawer Fragments -->
    <string name="buscar_navigation">Buscar</string>
    <string name="mis_reportes_navigation">Mis Reportes</string>
    <string name="mi_perfil_navigation">Mi perfil</string>
    <string name="configuracion_navigation">Configuración</string>
    <string name="cerrarSesion">Cerrar sesion</string>

    <!-- Registro Activity -->
    <string name="registrate_desde_nuestra_app">Regístrate desde nuestra app</string>
    <string name="bienvenido_denunciaty">Bienvenido a Denunciaty</string>
    <string name="la_app_valenciana">La app valenciana donde podrás \ndenunciar cualquier desperfecto o \nincidente presente en tu ubicación.</string>
    <string name="inicia_sesion">Iniciar Sesión</string>
    <string name="iniciasesion_registroapp">Iniciar Sesión</string>
    <string name="iniciando_registroapp">Iniciando</string>
    <string name="cancelar_registroapp">Cancelar</string>
    <string name="cancelando_registroapp">Cancelando</string>

    <!-- Registro Usuario Activity -->
    <string name="nombre_registroapp">Nombre</string>
    <string name="apellido_registroapp">Apellidos</string>
    <string name="localidad_registroapp">Localidad</string>
    <string name="email_registroapp">Email</string>
    <string name="usuario_registroapp">Usuario</string>
    <string name="contraseña_registroapp">Contraseña</string>
    <string name="repite_contraseña_registroapp">Repite Contraseña</string>
    <string name="enviar_registroapp">Enviar</string>
    <string name="registro_correctamente">Se ha registrado correctamente</string>
    <string name="registro_correcto">Registro correcto</string>

    <!-- Splash -->
    <string name="denunciaty_splash">Denunciaty</string>

    <!-- Login -->
    <string name="correo_login">Correo Electrónico</string>
    <string name="contraseña_login">Contraseña</string>

    <!-- Lista -->
    <string name="nombre_denuncia_lista">Nombre de la denuncia</string>
    <string name="calle_lista">calle</string>
    <string name="descripcion_lista">descripcion:</string>
    <string name="pref_cambiarIdioma">Cambiar idioma</string>
    <string name="cambiarContrase">Cambiar contraseña</string>
    <string name="pref_notificaciones">Notificaciones</string>
    <string name="pref_recibirNotificaciones">¿Quieres recibir notificaciones?</string>
    <string name="pref_accederWifi">Acceder solo con wifi</string>
    <string name="preff_Wifi">Wifi</string>
    <string name="notificaciones_pref">NOTIFICACIONES</string>
    <string name="idioma_pref">IDIOMA</string>
    <string name="pref_ajustesGenerales">AJUSTES GENERALES</string>
    <string name="pref_borrarCuenta">Borrar cuenta de usuario</string>
    <string name="pref_cerrarSesion">Cerrar sesión</string>
    <string name="pref_ajustesusuario">Ajustes de usuario</string>
    <string name="pref_austesdered">Ajustes de red</string>
    <string name="pref_vista">Vista del mapa</string>
    <string name="pref_vistaas">Vistas</string>
    <string name="alerta">Alerta</string>
    <string name="estasSeguro">¿ Estás seguro de que quieres cerrar sesión ?</string>
    <string name="confirmar">Confirmar</string>
    <string name="guardar">Guardar</string>
    <string name="camposVacios">Hay campos vacíos</string>
    <string name="limpieza">Limpieza</string>
    <string name="senyales">Señales</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="alumnbrado">Alumbrado</string>
    <string name="mobiliario">Mobiliario</string>
    <string name="viaPublica">Vía pública</string>
    <string name="arbolado">Arbolado</string>
    <string name="transporteP">Transporte público</string>
    <string name="otros">Otros</string>
    <string name="necesitasGPS">Necesitas tener el GPS activado</string>
    <string name="gpsAct">GPS Activado</string>
    <string name="ubicacionReporte">ubicacionReporte</string>
    <string name="tituloReporte">tituloReporte</string>
    <string name="notificacion">NOTIFICACION</string>
    <string name="txtNotificacion">Bienvenido a nuestra app, en este mapa puedes podras añadir incidentes cercanos a tu localizacion</string>
    <string name="reporteSeleccionado">Reporte seleccionado</string>
    <string name="descripcion">Descripción</string>
    <string name="ubicacion">Ubicación</string>
    <string name="tipo">Tipo</string>
    <string name="denunciadoPor">Denunciado por:</string>
    <string name="contrAntigua">Contraseña antigua</string>
    <string name="ContrNueva">Contraseña nueva</string>
    <string name="ContrNueva2">Contraseña nueva repetida</string>
    <string name="hacerFoto">Hacer foto</string>
    <string name="selecionarFoto">Seleccionar foto</string>
    <string name="vistaNormal">Vista normal</string>
    <string name="vistaHibrida">Vista hibrida</string>
    <string name="vistaSatelite">Vista satelite</string>
    <string name="edit">Edita</string>
    <string name="Senyalizacion">Señalización</string>
    <string name="Limpieza">Limpieza</string>
    <string name="Vehiculo">Vehículo</string>
    <string name="Iluminacion">Iluminación</string>
    <string name="Mobiliario">Mobiliario</string>
    <string name="ViaPublica">Via pública</string>
    <string name="Arbolado">Arbolado</string>
    <string name="TransportePublico">Transporte público</string>
    <string name="Otros">Otros</string>
    <string name="AccesoWifi">Accesos Wi-Fi</string>
    <string name="MisReportes">Mis reportes</string>
    <string name="TodosLosReportes">Todos los reportes</string>
    <string name="Lista">lista</string>
    <string name="QuienesSomos">¿QUIENES SOMOS?</string>
    <string name="txtQuienesSomos">Somos un grupo de estudiantes que nos hemos dedicado a hacer esta app para poder mejorar el entorno que nos rodea. Queremos poder denunciar cualquier tipo de desperfecto que haya en la calle y ponernos en contacto con aquellas instituciones que puedan solucionarlos.</string>
    <string name="Conocenos">Conócenos</string>

    <!--CARD LAYOUT-->
    <string name="descripcion_card">Descripción</string>
    <string name="ubi_card">Ubicación</string>
    <string name="denunciado_card">Denunciado por:</string>
    <string name="tipo_card">Tipo</string>

</resources>
