<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notificaciones_pref">
        <SwitchPreference
            android:key="notificaciones"
            android:summary="@string/pref_recibirNotificaciones"
            android:title="@string/pref_notificaciones"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/idioma_pref">
        <ListPreference
            android:key="cambiarIdioma"
            android:title="@string/pref_idioma"
            android:summary="@string/pref_idioma"
            android:dialogTitle="@string/pref_cambiarIdioma"
            android:entries="@array/idiomas"
            android:entryValues="@array/codigo_idiomas" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_austesdered">
            <SwitchPreference
                android:key="accederWifi"
                android:summary="@string/preff_Wifi"
                android:title="@string/pref_accederWifi"/>

            <Preference android:title="@string/pref_title_system_sync_settings">
                <intent android:action="android.settings.SYNC_SETTINGS" />
            </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_vista">
        <ListPreference
            android:key="cambiarVista"
            android:title="@string/pref_vista"
            android:summary="@string/pref_vista"
            android:dialogTitle="@string/pref_vistaas"
            android:entries="@array/vistas"
            android:entryValues="@array/codigo_vistas" />
    </PreferenceCategory>

    <PreferenceCategory android:title="¿QUIENES SOMOS?">
       <Preference
           android:summary="Somos un grupo de estudiantes que nos hemos dedicado a hacer esta app para poder mejorar el entorno que nos rodea. Queremos poder denunciar cualquier tipo de desperfecto que haya en la calle y ponernos en contacto con aquellas instituciones que puedan solucionarlos."/>
    </PreferenceCategory>

    <PreferenceCategory android:title="ACERCA DE NOSOTROS">
        <Preference  android:title = "Conocenos"  >
            <intent  android:action = "android.intent.action.VIEW"
                android:data = "https://docs.google.com/document/d/1G1Z2gWwBZg9mZnBpi2JRSBpN0hmE_7QrGv2WCq9Tt3o/edit"  />
        </Preference>
    </PreferenceCategory>


</PreferenceScreen>