<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.denunciaty.denunciaty.RegistroAppActivity"
    android:weightSum="1"
    android:background="@mipmap/fondo_registro">



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_avatar"
        android:layout_width="175dp"
        android:layout_height="158dp"
        android:src="@mipmap/avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_nombre"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFFFF"
                android:textSize="22dp"
                android:hint="@string/nombre_registroapp"
                android:layout_marginTop="20dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_apellidos"
                android:gravity="center_horizontal"
                android:textSize="22dp"
                android:textColor="#FFFFFFFF"
                android:hint="@string/apellido_registroapp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_localidad"
                android:gravity="center_horizontal"
                android:textSize="22dp"
                android:textColor="#ffffff"
                android:hint="@string/localidad_registroapp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:gravity="center_horizontal"
                android:textSize="22dp"
                android:textColor="#FFFFFFFF"
                android:hint="@string/email_registroapp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_usuario"
                android:gravity="center_horizontal"
                android:textSize="22dp"
                android:textColor="#FFFFFFFF"
                android:hint="@string/usuario_registroapp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/et_contraseña"
                android:textColor="#FFFFFFFF"
                android:hint="@string/contraseña_registroapp"
                android:textStyle="bold"
                android:textSize="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/et_contraseñaRepetida"
                android:textColor="#FFFFFFFF"
                android:hint="@string/contraseña_registroapp"
                android:textStyle="bold"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar_registroapp"
                android:id="@+id/bt_submit"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="#010101"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
